quacker-api-gateway/k8s/staging/quacker-api-gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quacker-api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - stagingapi.quacker.nl
      secretName: testsecret-tls
  rules:
    - host: 'stagingapi.quacker.nl'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: quacker-api-gateway
                port:
                  number: 5021
